add local storage or minio storage
